Deleted DC in CustomerDataset.ipynb, not it reads directly the csv pre-cleaned by DataUnderstanding_DataCleaning.ipynb

--- a/CustomerDataset.ipynb
+++ b/CustomerDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,108 +15,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Starting dataset\n",
-    "df = pd.read_csv('customer_supermarket.csv', sep='\\t', index_col=0)"
+    "df = pd.read_csv('cleaned_dataframe.csv', sep='\\t', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 49,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n0   536365  01/12/10 08:26  2.55       17850  United Kingdom  85123A   \n1   536365  01/12/10 08:26  3.39       17850  United Kingdom   71053   \n2   536365  01/12/10 08:26  2.75       17850  United Kingdom  84406B   \n3   536365  01/12/10 08:26  3.39       17850  United Kingdom  84029G   \n4   536365  01/12/10 08:26  3.39       17850  United Kingdom  84029E   \n\n                             ProdDescr  Qta  \n0   WHITE HANGING HEART T-LIGHT HOLDER    6  \n1                  WHITE METAL LANTERN    6  \n2       CREAM CUPID HEARTS COAT HANGER    8  \n3  KNITTED UNION FLAG HOT WATER BOTTLE    6  \n4       RED WOOLLY HOTTIE WHITE HEART.    6  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BasketID</th>\n      <th>BasketDate</th>\n      <th>Sale</th>\n      <th>CustomerID</th>\n      <th>CustomerCountry</th>\n      <th>ProdID</th>\n      <th>ProdDescr</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2.55</td>\n      <td>17850</td>\n      <td>United Kingdom</td>\n      <td>85123A</td>\n      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3.39</td>\n      <td>17850</td>\n      <td>United Kingdom</td>\n      <td>71053</td>\n      <td>WHITE METAL LANTERN</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2.75</td>\n      <td>17850</td>\n      <td>United Kingdom</td>\n      <td>84406B</td>\n      <td>CREAM CUPID HEARTS COAT HANGER</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3.39</td>\n      <td>17850</td>\n      <td>United Kingdom</td>\n      <td>84029G</td>\n      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3.39</td>\n      <td>17850</td>\n      <td>United Kingdom</td>\n      <td>84029E</td>\n      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n      <td>6</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Handle NAN CustomerID rows\n",
-    "df.drop(df[~df['CustomerID'].notnull()].index, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set Sale to have the correct type\n",
-    "df['Sale'].replace(to_replace=r'(\\d+),(\\d*)', value=r'\\1.\\2', regex=True, inplace=True)\n",
-    "df['Sale'] = df['Sale'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Clean CustomerID from trailing '.0'\n",
-    "df['CustomerID'] = df['CustomerID'].astype(str)\n",
-    "df['CustomerID'].replace(to_replace=r'(\\d+)\\.(?:\\d*)?', value=r'\\1', regex=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize variables to analyze correctness of negative Qta rows\n",
-    "pos_quant_tot = {}\n",
-    "neg_quant_tot = {}\n",
-    "for index, row in df.iterrows():\n",
-    "    if row['Qta'] > 0:\n",
-    "        if (row['CustomerID'], row['ProdID'], row['Sale']) not in pos_quant_tot.keys():\n",
-    "            pos_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = row['Qta']\n",
-    "        else:\n",
-    "            pos_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] += row['Qta']\n",
-    "    else:\n",
-    "        if (row['CustomerID'], row['ProdID'], row['Sale']) not in neg_quant_tot.keys():\n",
-    "            l = [index]\n",
-    "            neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = (-1*row['Qta'], l)\n",
-    "        else:\n",
-    "            prev = neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] \n",
-    "            prev[1].append(index)\n",
-    "            neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = (prev[0]-row['Qta'], prev[1])\n",
-    "positive_elements = set(pos_quant_tot.keys())\n",
-    "negative_elements = set(neg_quant_tot.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+    "df.head()"
+   ],
    "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# drop negative Qta rows that are not matched with positive ones\n",
-    "not_valid = negative_elements - (positive_elements & negative_elements)\n",
-    "indexes_todelete = []\n",
-    "for key in not_valid:\n",
-    "    for x in neg_quant_tot[key][1]:\n",
-    "        indexes_todelete.append(x)\n",
-    "df.drop(indexes_todelete, inplace=True)"
-   ]
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop negative Qta rows that are invalid neg_qta > pos_qta\n",
-    "indexes_todelete = []\n",
-    "for key in positive_elements & negative_elements:\n",
-    "    if pos_quant_tot[key] < neg_quant_tot[key][0]:\n",
-    "            for x in neg_quant_tot[key][1]:\n",
-    "                indexes_todelete.append(x)\n",
-    "df.drop(indexes_todelete, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -126,20 +59,20 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 405448 entries, 0 to 541909\n",
+      "Int64Index: 400220 entries, 0 to 541909\n",
       "Data columns (total 8 columns):\n",
       " #   Column           Non-Null Count   Dtype  \n",
       "---  ------           --------------   -----  \n",
-      " 0   BasketID         405448 non-null  object \n",
-      " 1   BasketDate       405448 non-null  object \n",
-      " 2   Sale             405448 non-null  float64\n",
-      " 3   CustomerID       405448 non-null  object \n",
-      " 4   CustomerCountry  405448 non-null  object \n",
-      " 5   ProdID           405448 non-null  object \n",
-      " 6   ProdDescr        405448 non-null  object \n",
-      " 7   Qta              405448 non-null  int64  \n",
-      "dtypes: float64(1), int64(1), object(6)\n",
-      "memory usage: 18.6+ MB\n"
+      " 0   BasketID         400220 non-null  object \n",
+      " 1   BasketDate       400220 non-null  object \n",
+      " 2   Sale             400220 non-null  float64\n",
+      " 3   CustomerID       400220 non-null  int64  \n",
+      " 4   CustomerCountry  400220 non-null  object \n",
+      " 5   ProdID           400220 non-null  object \n",
+      " 6   ProdDescr        400220 non-null  object \n",
+      " 7   Qta              400220 non-null  int64  \n",
+      "dtypes: float64(1), int64(2), object(5)\n",
+      "memory usage: 27.5+ MB\n"
      ]
     }
    ],
@@ -149,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,38 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "unique_products = []\n",
-    "for customer in df[\"CustomerID\"].unique():\n",
-    "    unique_products.append(len(df.loc[df[\"CustomerID\"] == customer, [\"ProdID\"]][\"ProdID\"].unique()))"
-   ]
+    "for customer in df['CustomerID'].unique():\n",
+    "    unique_products.append(len(df.loc[df['CustomerID'] == customer, ['ProdID']].drop_duplicates()))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# I: the total number of items purchased by a customer during the period of observation\n",
-    "data['I'] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Iu: the number of distinct items bought by a customer in the period of observation.\n",
-    "data[\"Unique_Products\"] = unique_products"
+    "data['N_Dist_Prods'] = unique_products"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,151 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>I</th>\n",
-       "      <th>Unique_Products</th>\n",
-       "      <th>Imax</th>\n",
-       "      <th>E</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17850</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13047</td>\n",
-       "      <td>0</td>\n",
-       "      <td>106</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12583</td>\n",
-       "      <td>0</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13748</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>15100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4334</th>\n",
-       "      <td>13436</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4335</th>\n",
-       "      <td>15520</td>\n",
-       "      <td>0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4336</th>\n",
-       "      <td>13298</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4337</th>\n",
-       "      <td>14569</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4338</th>\n",
-       "      <td>12713</td>\n",
-       "      <td>0</td>\n",
-       "      <td>38</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4339 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CustomerID  I  Unique_Products  Imax  E\n",
-       "0         17850  0               21     0  0\n",
-       "1         13047  0              106     0  0\n",
-       "2         12583  0              115     0  0\n",
-       "3         13748  0               24     0  0\n",
-       "4         15100  0                1     0  0\n",
-       "...         ... ..              ...   ... ..\n",
-       "4334      13436  0               12     0  0\n",
-       "4335      15520  0               18     0  0\n",
-       "4336      13298  0                2     0  0\n",
-       "4337      14569  0               10     0  0\n",
-       "4338      12713  0               38     0  0\n",
-       "\n",
-       "[4339 rows x 5 columns]"
-      ]
+      "text/plain": "      CustomerID  N_Dist_Prods  Imax  E\n0          17850            21     0  0\n1          13047           106     0  0\n2          12583           115     0  0\n3          13748            24     0  0\n4          15100             1     0  0\n...          ...           ...   ... ..\n4334       13436            12     0  0\n4335       15520            18     0  0\n4336       13298             2     0  0\n4337       14569            10     0  0\n4338       12713            38     0  0\n\n[4339 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CustomerID</th>\n      <th>N_Dist_Prods</th>\n      <th>Imax</th>\n      <th>E</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>17850</td>\n      <td>21</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13047</td>\n      <td>106</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>12583</td>\n      <td>115</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>13748</td>\n      <td>24</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>15100</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4334</th>\n      <td>13436</td>\n      <td>12</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4335</th>\n      <td>15520</td>\n      <td>18</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4336</th>\n      <td>13298</td>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4337</th>\n      <td>14569</td>\n      <td>10</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4338</th>\n      <td>12713</td>\n      <td>38</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>4339 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 34,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
